--- a/.cproject
+++ b/.cproject
@@ -120,6 +120,8 @@
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1546727899" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
                                     <listOptionValue builtIn="false" value="../include"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../urdl"/>
                                     								
                                 </option>
                                 								
@@ -324,6 +326,8 @@
                                 <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1270622141" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
                                     									
                                     <listOptionValue builtIn="false" value="../include"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../urdl"/>
                                     								
                                 </option>
                                 								
